--- a/public/index.html
+++ b/public/index.html
@@ -14,25 +14,7 @@
         enabled. Please enable it to continue.</strong
       >
     </noscript>
-    <div id="app">
-      <form
-        id="signup-form"
-        method="post"
-        action="#"
-        @submit.prevent="submit"
-      />
-      <input
-        type="email"
-        name="email"
-        id="email"
-        placeholder="Email Address"
-        required
-        v-model="email"
-      />
-      <span class="message success" :class="{visible:isVisible}"
-        >Thank you!</span
-      >
-    </div>
+    <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
   <!-- production version, optimized for size and speed -->
